--- a/Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/Web/Areas/Admin/Views/Home/Index.cshtml
@@ -9,5 +9,15 @@
     </div>
     <div class="box-body">
         Welcome...
+
+        <div style="margin:0 auto;width:600px;">
+            <form class="form-horizontal">
+                <div class="form-group form-group-sm">
+                    <label>标题</label>
+                    <input type="text" class="form-control" placeholder="" />
+                </div>
+                <form-input ng-label="'label'" name="name" ng-required="true" pattern="\d+" des="eewfwef" class="text-danger" placeholder="wefwe"></form-input>
+            </form>
+        </div>
     </div>
-</div>
+</div>  
