--- a/Web/Areas/Admin/Views/Shared/_LayoutMain.cshtml
+++ b/Web/Areas/Admin/Views/Shared/_LayoutMain.cshtml
@@ -3,22 +3,16 @@
 }
 <div class="wrapper">
     <header class="main-header">
-        <!-- Logo -->
         <a href="index2.html" class="logo">
-            <!-- mini logo for sidebar mini 50x50 pixels -->
-            <span class="logo-mini"><b>A</b>LT</span>
-            <!-- logo for regular state and mobile devices -->
-            <span class="logo-lg"><b>Admin</b>LTE</span>
+            <span class="logo-mini" ng-bind="::settings.appShortName"></span>
+            <span class="logo-lg" ng-bind="::settings.appName"></span>
         </a>
-        <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
-            <!-- Sidebar toggle button-->
             <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
                 <span class="sr-only">Toggle navigation</span>
             </a>
             <div class="navbar-custom-menu">
                 <ul class="nav navbar-nav">
-                    <!-- class: messages-menu, notifications-menu, tasks-menu -->
                     <li class="dropdown messages-menu">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             <i class="fa fa-envelope-o"></i>
@@ -27,10 +21,8 @@
                         <ul class="dropdown-menu">
                             <li class="header">You have 1 messages</li>
                             <li>
-                                <!-- inner menu: contains the actual data -->
                                 <ul class="menu">
                                     <li>
-                                        <!-- start message -->
                                         <a href="#">
                                             <div class="pull-left">
                                                 <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
@@ -41,7 +33,7 @@
                                             </h4>
                                             <p>Why not buy a new awesome theme?</p>
                                         </a>
-                                    </li><!-- end message -->
+                                    </li>
                                 </ul>
                             </li>
                             <li class="footer"><a href="#">See All Messages</a></li>
@@ -141,11 +133,11 @@
     </div>
     <footer class="main-footer">
         <div class="pull-right hidden-xs">
-            <b>Version</b> 1.0
+            <b>Version</b> <span ng-bind="::settings.appVersion"></span>
         </div>
         <strong>
             Copyright &copy; @DateTime.Now.Year
-            <a href="@(!string.IsNullOrWhiteSpace(Global.AppUrl)? Global.AppUrl: "#")">@Global.AppName</a>.
+            <a ng-href="{{::settings.appUrl}}" ng-bind="::settings.appName" target="_blank"></a>.
         </strong> All rights reserved.
     </footer>
 
